[package]
name = "url-short"
version = "0.1.0"
authors = ["David Bradford <david.bradford@mongodb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
harsh = "0.2"
# mongodb = { version = "2.0.0-alpha.1", default-features = false, features = ["sync"] }
mongodb = { version = "1.2" }
serde = "1"
serde_json = "1"
